--- a/public/css/pages/entrance/apprentice_entrance.css
+++ b/public/css/pages/entrance/apprentice_entrance.css
@@ -32,7 +32,7 @@ body {
 
 .main-content {
     display: flex;
-    width: 1000px;
+    width: 1500px;
     gap: 10px;
     flex-direction: column;
 }
@@ -46,6 +46,7 @@ body {
     border-radius: 0px;
     border: 2px solid #E2E8F0;
     padding: 30px 40px;
+    height: 160px;
 }
 
 .card-title {
@@ -97,6 +98,7 @@ body {
     padding: 10px 30px;
     width: 100%;
     padding: 2.5rem;
+    height: 600px;
 }
 
 
@@ -197,13 +199,29 @@ body {
     background-color: white;
     border-radius: 0px;
     border: 2px solid #E2E8F0;
-    width: 400px;
-    padding: 10px;
-    height: 433px;
+    width: 500px;
+    padding: 20px;
+    height: 600px;
 }
 
 .user-info-card .title{
     border-bottom: 1px solid #E2E8F0;
+    display: flex;
+    align-items: center;
+    font-family: Arial, Helvetica, sans-serif;
+    margin-bottom: 10px;
+    padding-bottom: 10px;
+    gap: 10px;
+}
+
+.user-info-card .title h3{
+    font-weight: 400;
+    color: #6a727c;
+}
+
+.user-info-card .title img{
+    width: 20px;
+    height: 20px;
 }
 
 .info-item {
