--- a/public/css/pages/programming_dashboard.css
+++ b/public/css/pages/programming_dashboard.css
@@ -42,18 +42,168 @@ body {
     box-shadow: 0 5px 20px rgba(0, 0, 0, 0.08);
 }
 
-/* Título de página */
-.page-title {
-    margin-bottom: 10px;
-    font-weight: 500;
-    padding-bottom: 15px;
-    border-bottom: 1px solid #eaeaea;
+.container-titulos{
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 1px solid rgb(207, 207, 207);
+    padding-bottom: 5px;
 }
 
-/* Descripción bajo el título */
-.page-description {
-    color: #2b2b2b;
-    font-size: 16px;
+.titulo{
+    display: flex;
+    align-items:center;
+    gap: 5px;
+    width: 100%;
+}
+
+.titulo img{
+    width: 20px;
+}
+
+.row{
+    display: flex;
+    width: 100%;
+    gap: 20px;
+    margin-top: 10px;
+}
+
+.campo{
+    display: flex;
+    flex-direction: column;
+    gap: 1px;
+}
+
+.labels{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 5px;
+}
+
+label{
+    color: gray;
+    font-size: 14px;
+}
+
+select, input{
+    width: 100%;
+    padding: 10px 15px;
+    border-radius: 8px;
+    border: 2px solid #E5EAF0;
+    font-size: 15px;
+    transition: border-color 0.2s, box-shadow 0.2s;
+    background-color: #F8FAFC;
+}
+
+select{
+    color: #a1a1a1;
+    appearance: none;
+    cursor: pointer;
+    background: url('../../icons/flecha-select.png') no-repeat right 13px center;
+    background-size: 15px; /* Tamaño de la flecha */
+}
+
+select:focus,
+input:focus {
+    outline: none;
+    box-shadow: 0 0 0 3px rgba(40, 167, 69, 0.1);
+}
+
+.large-input{
+    width: 700px;
+}
+
+.medium-input{
+    width: 500px;
+}
+
+.select-nivel{
+    width: 150px;
+}
+
+.municipio{
+    width: 250px;
+}
+
+.jornada{
+    width: 160px;
+}
+
+select{
+    background-color: #F8FAFC;
+}
+
+.contenedor-separado{
+    display: flex;
+    align-items:center;
+    gap: 10px;
+    
+}
+
+.contenedor-gris{
+    width: 100%;
+    background-color: #F8FAFC;
+    border-radius: 10px;
+    padding: 10px;
+    margin-top: 10px;   
+}
+
+.filas{
+    display: flex;
+    align-items:center;
+    gap: 10px;
+}
+
+.ambiente{
+    width: 200px;
+}
+
+.week{
+    display: flex;
+    justify-content: center;
+    align-items:center;
+    width: 100%;
+    gap: 10px;
+}
+
+.dia{
+    padding: 10px;
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 300px;
+    background-color: white;
+    border: 1px solid #C0C0C0;
+    color: gray;
+    cursor:pointer;
+}
+
+input[type=time] {
+    padding: 7px;
+}
+
+.rango-horas{
+    display: flex;
+    gap: 8px;
+    justify-content: center;
+    align-items: center;
+}
+
+.result{
+    border: none;
+    background-color: #A0BAD3;
+    padding: 13px;
+    border-radius: 10px;
+    width: 300px;
+    margin-top: 15px;
+    cursor: pointer;
+}
+
+.result p{
+    color: white;
+    font-weight: 600;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 15px;
 }
 
 /* Botones */
