--- a/public/css/pages/programming_dashboard.css
+++ b/public/css/pages/programming_dashboard.css
@@ -42,49 +42,50 @@ body {
     box-shadow: 0 5px 20px rgba(0, 0, 0, 0.08);
 }
 
-.container-titulos{
+.container-titulos {
     display: flex;
     justify-content: space-between;
     border-bottom: 1px solid rgb(207, 207, 207);
     padding-bottom: 5px;
 }
 
-.titulo{
+.titulo {
     display: flex;
-    align-items:center;
+    align-items: center;
     gap: 5px;
     width: 100%;
 }
 
-.titulo img{
+.titulo img {
     width: 20px;
 }
 
-.row{
+.row {
     display: flex;
     width: 100%;
     gap: 20px;
     margin-top: 10px;
 }
 
-.campo{
+.campo {
     display: flex;
     flex-direction: column;
     gap: 1px;
 }
 
-.labels{
+.labels {
     display: flex;
     justify-content: space-between;
     margin-bottom: 5px;
 }
 
-label{
+label {
     color: gray;
     font-size: 14px;
 }
 
-select, input{
+select,
+input {
     width: 100%;
     padding: 10px 15px;
     border-radius: 8px;
@@ -94,12 +95,13 @@ select, input{
     background-color: #F8FAFC;
 }
 
-select{
+select {
     color: #a1a1a1;
     appearance: none;
     cursor: pointer;
     background: url('../../icons/flecha-select.png') no-repeat right 13px center;
-    background-size: 15px; /* Tamaño de la flecha */
+    background-size: 15px;
+    /* Tamaño de la flecha */
 }
 
 select:focus,
@@ -108,98 +110,111 @@ input:focus {
     box-shadow: 0 0 0 3px rgba(40, 167, 69, 0.1);
 }
 
-.large-input{
+.large-input {
     width: 700px;
 }
 
-.medium-input{
+.medium-input {
     width: 500px;
 }
 
-.select-nivel{
+.select-nivel {
     width: 150px;
 }
 
-.municipio{
+.municipio {
     width: 250px;
 }
 
-.jornada{
+.jornada {
     width: 160px;
 }
 
-select{
+select {
     background-color: #F8FAFC;
 }
 
-.contenedor-separado{
+.contenedor-separado {
     display: flex;
-    align-items:center;
+    align-items: center;
     gap: 10px;
-    
+
 }
 
-.contenedor-gris{
+.contenedor-gris {
     width: 100%;
     background-color: #F8FAFC;
     border-radius: 10px;
     padding: 10px;
-    margin-top: 10px;   
+    margin-top: 10px;
 }
 
-.filas{
+.filas {
     display: flex;
-    align-items:center;
+    align-items: center;
     gap: 10px;
 }
 
-.ambiente{
+.ambiente {
     width: 200px;
 }
 
-.week{
+.week {
     display: flex;
     justify-content: center;
-    align-items:center;
+    align-items: center;
     width: 100%;
     gap: 10px;
 }
 
-.dia{
-    padding: 10px;
+.dia {
     border-radius: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
     width: 300px;
-    background-color: white;
-    border: 1px solid #C0C0C0;
+    background-color: #f5f5f5;
+    border: 1px solid #999999;
     color: gray;
-    cursor:pointer;
+    cursor: pointer;
+    font-size: 15px;
+    position: relative;
+    padding: 15px 20px;
+}
+
+.dia:hover{
+    background-color: #2c8a19a1;
+    color: white;
 }
 
 input[type=time] {
     padding: 7px;
 }
 
-.rango-horas{
+.rango-horas {
     display: flex;
     gap: 8px;
     justify-content: center;
     align-items: center;
 }
 
-.result{
+.centrado{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.result {
     border: none;
     background-color: #A0BAD3;
-    padding: 13px;
+    padding: 13px 25px;
     border-radius: 10px;
-    width: 300px;
+    width: auto;
     margin-top: 15px;
     cursor: pointer;
 }
 
-.result p{
+.result p {
     color: white;
     font-weight: 600;
     font-family: Arial, Helvetica, sans-serif;
@@ -505,11 +520,11 @@ table tr:last-child td {
 /* Cuando la pantalla es menor a 768px (móviles) */
 @media (max-width: 768px) {
     .main-layout {
-        flex-direction: column; /* Cambia layout a vertical */
+        flex-direction: column;
+        /* Cambia layout a vertical */
     }
 
     .content {
         overflow-y: auto;
     }
 }
-
