--- a/public/css/pages/programming_dashboard.css
+++ b/public/css/pages/programming_dashboard.css
@@ -36,24 +36,42 @@ body {
 /* Contenedor de contenido interno (panel, tarjeta, etc.) */
 .container {
     max-width: 100%;
-    padding: 20px;
     background-color: #fff;
     border-radius: 12px;
     box-shadow: 0 5px 20px rgba(0, 0, 0, 0.08);
+    padding: 20px;
+}
+
+.recuadro {
+    padding: 0px;
+}
+
+.contenedor-padding {
+    padding: 15px;
+    border: 2px solid #5a758681;
+    border-top: none;
+    border-radius: 0px 0px 10px 10px;
 }
 
 .container-titulos {
     display: flex;
     justify-content: space-between;
-    border-bottom: 1px solid rgb(207, 207, 207);
-    padding-bottom: 5px;
+    padding: 10px;
+    background: linear-gradient(to right, #527b96, #12354dc2);
+    border-radius: 10px 10px 0px 0px;
+    
 }
 
 .titulo {
     display: flex;
     align-items: center;
     gap: 5px;
-    width: 100%;
+}
+
+.titulo h3 {
+    color: white;
+    font-weight: 400;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .titulo img {
@@ -104,7 +122,7 @@ select {
     /* Tamaño de la flecha */
 }
 
-input{
+input {
     color: #a1a1a1;
 }
 
@@ -150,7 +168,7 @@ select {
     background-color: #F8FAFC;
     border-radius: 10px;
     padding: 10px;
-    margin-top: 10px;
+    margin-bottom: 10px; 
 }
 
 .filas {
@@ -164,7 +182,7 @@ select {
     width: 200px;
 }
 
-.programa{
+.programa {
     width: 290px;
 }
 
@@ -175,26 +193,31 @@ select {
     width: 100%;
     gap: 10px;
 }
-
 .dia {
+    --hover: rgb(25, 160, 25);      /* color del efecto al hacer hover */
+
     border-radius: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 300px;
-    background-color: #f5f5f5;
-    border: 1px solid #999999;
+    width: 100%;
+    background-color: #ffffff;
+    border: 1px solid rgb(182, 181, 181);
     color: gray;
     cursor: pointer;
     font-size: 15px;
-    position: relative;
     padding: 15px 20px;
+    transition: 0.25s;
 }
 
-.dia:hover{
-    background-color: #42b12ca1;
+.dia:hover,
+.dia input[type="checkbox"]:checked {
     color: white;
+    border-color: var(--hover);
+    box-shadow: inset 0 -3.25em 0 0 var(--hover); /* efecto del QUINTO botón */
 }
+
+
 
 input[type=time] {
     padding: 7px;
@@ -207,19 +230,19 @@ input[type=time] {
     align-items: center;
 }
 
-.botones{
+.botones {
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 80px;
 }
 
 .result {
     border: none;
-    background-color: #A0BAD3;
+    background-color: #12354d;
     padding: 13px 25px;
     border-radius: 10px;
     width: 150px;
-    margin-top: 15px;
     cursor: pointer;
 }
 
@@ -230,7 +253,7 @@ input[type=time] {
     font-size: 15px;
 }
 
-.result:hover{
+.result:hover {
     background-color: #7794af;
 }
 
